# molam-connect

./: .dockerignore  .env.example  .gitignore  ALL_BRIQUES_INVENTORY.md  AUDIT_DEFAUTS_ET_AMELIORATIONS.md  BRIQUE-139-STATUS.md  BRIQUE-140-COMPLETE.md  BRIQUE-140-FINAL-STATUS.md  BRIQUE-TEMPLATE.md  BRIQUE149A_QR_WALLET_DEPLOYMENT.md  BRIQUE1_DEPLOYMENT_SUMMARY.md  BRIQUES_SOLUTIONS_AUDIT.md  BRIQUE_137_138TER_INTEGRATION.md  BRIQUE_137_138TER_STATUS.md  DOCKER_GUIDE.md  Dockerfile  FIX_RBAC_DATABASE.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY_BRIQUE68.md  IMPLEMENTATION_TODO.md  INDEX.md  OPTIONS_DEPLOIEMENT.md  POSTGRESQL_SETUP.md  POSTGRESQL_TROUBLESHOOTING.md  QUICK_START.md  QUICK_START_137_138TER.md  QUICK_START_TESTING.md  RBAC_INTEGRATION.md  RBAC_QUICK_START.md  README.md  START_DASHBOARD.md  TESTING_GUIDE.md  TESTING_QUICK_START.md  TESTING_STATUS.md  TEST_PLAN.md  TEST_RBAC_LOCALHOST.md  TRANSLATION_DEPLOYMENT_SUMMARY.md  briques-sql-report.txt  build-all-briques.ps1  (+51 more)
brique-105/: BRIQUE_105_SUMMARY.md  README.md  pyproject.toml  requirements-dev.txt
brique-105/.github/workflows/: ci.yml
brique-105/examples/: async_checkout.py  checkout_server.py  webhook_receiver.py
brique-105/migrations/: 001_idempotency_and_webhooks.sql
brique-105/molam_sdk/: __init__.py  async_client.py  client.py  config.py  exceptions.py
brique-105/molam_sdk/http/: __init__.py  adapter.py  aiohttp_adapter.py  requests_adapter.py
brique-105/molam_sdk/utils/: __init__.py  idempotency.py  webhook.py
brique-105/tests/: __init__.py  test_client.py  test_webhook.py
(+3143 files in other folders)
